--- a/src/app/components/shooping/nuevo-producto/nuevo-producto.component.html
+++ b/src/app/components/shooping/nuevo-producto/nuevo-producto.component.html
@@ -112,7 +112,7 @@
         </div>
         <div class="form-group ">
             <label for="producto" style="margin: 0;">Etiquetas</label>
-            <input type="text " class="form-control " id="etiquetas"
+            <input type="text " [(ngModel)]="selectedModeloProducto2" class="form-control " id="etiquetas"
                 placeholder="Ingrese las etiquetas del Producto." formControlName="etiquetas">
             <small
                 *ngIf="modelProductForm.controls['etiquetas'].invalid && (modelProductForm.controls['etiquetas'].dirty || modelProductForm.controls['etiquetas'].touched)">
@@ -123,7 +123,7 @@
         </div>
         <div class="form-group ">
             <label for="tamanio" style="margin: 0;">Tamaño</label>
-            <input type="text " class="form-control " id="tamanio" placeholder="Ingrese el tamaño del Producto."
+            <input type="text " [(ngModel)]="tamanio" class="form-control " (input)="tamanioInp()" id="tamanio" placeholder="Ingrese el tamaño del Producto."
                 formControlName="tamanio">
             <small
                 *ngIf="modelProductForm.controls['tamanio'].invalid && (modelProductForm.controls['tamanio'].dirty || modelProductForm.controls['tamanio'].touched)">
