ACT CARG MASV PORT 1

--- a/src/app/components/products/productos/productos.component.html
+++ b/src/app/components/products/productos/productos.component.html
@@ -4,7 +4,10 @@
         <div class="row mx-3">
             <fa-icon [icon]="faList" [size]="'3x'" style="color: #636363;"></fa-icon>
             <h1 class="mx-5 " style="color: #636363;">Productos</h1>
-            <div style="position: absolute;right: 15.5em;" class="mx-3">
+            <div style="position: absolute;right: 26.5em;" class="mx-3">
+                <button class="btn btn-success" (click)="onMigrarPP()">+ PROVEEDORES </button>
+            </div>
+            <div style="position: absolute;right: 15.8em;" class="mx-3">
                 <button class="btn btn-info" (click)="onMigrar()">+ PRODUCTOS </button>
             </div>
             <div style="position: absolute;right: 4.5em;" class="mx-3">
