--- a/src/app/components/shooping/compra-nuevo/compra-nuevo.component.html
+++ b/src/app/components/shooping/compra-nuevo/compra-nuevo.component.html
@@ -41,10 +41,12 @@
                             <a class="btn button" (click)=" crearDetalle(proveedorProducto)"
                                 style="border-radius: 5px; 
                                        background: rgb(49,99,173,0.8); 
-                                       font-size: 14px; width:70px; 
+                                       font-size: 13px; width:75px; 
                                        height:35px;
-                                       text-align:left; 
-                                       margin-top: 10px;
+                                       text-align:left;
+                                       margin-right: 30px;
+                                       margin-left: 0px;
+                                       margin-top: 0px;
                                        ">
                                 <span style="color:white;">
                                         AÑADIR
