--- a/src/app/components/sales/ver-factura/ver-factura.component.html
+++ b/src/app/components/sales/ver-factura/ver-factura.component.html
@@ -12,10 +12,10 @@
         <h1>Factura Electrónica</h1>
         <div class="company-info">
           <div class="company-details">
-            <h3>{{ nombreGrupo }}</h3>
-            <p>RUC: {{ idFiscal }}</p>
-            <p>Dirección: Dirección de la empresa</p>
-            <p>Teléfono: +1234567890</p>
+            <h3>{{ nombreSoc }}</h3>
+            <p>RUC: {{ idFiscalSoc }}</p>
+            <p>Dirección: {{direccionAlm}}</p>
+            <p>Teléfono: {{telefonoAlm}}</p>
           </div>
         </div>
         <div class="invoice-info">
