--- a/src/app/components/navegation-cl/navegation-cl.component.html
+++ b/src/app/components/navegation-cl/navegation-cl.component.html
@@ -17,6 +17,7 @@
             <a mat-list-item style="color: white" (click)="transaccionesExpandidas = !transaccionesExpandidas">
                 <span class="material-icons-outlined" style="font-size: 24px">remove_done</span>
                 <font style="font-size: 13px; text-align: right;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Transacciones</font>
+                <mat-icon style="font-size: 18px; position: absolute; right: 8px;">keyboard_arrow_down</mat-icon>
             </a>
             <div *ngIf="transaccionesExpandidas" class="subitem-menu">
                 <a mat-list-item [routerLink]="[{ outlets: { contentClient: ['almacenesshooping'] } }]"
