--- a/src/app/components/navegation-cl/navegation-cl.component.css
+++ b/src/app/components/navegation-cl/navegation-cl.component.css
@@ -8,6 +8,11 @@
   
 }
 
+.disabled-link {
+  pointer-events: none;
+  background-color: rgba(80, 101, 224, 1);
+}
+
 .sidenav .mat-toolbar {
   display: block;
   text-align: right;
