--- a/src/app/components/sales/ver-factura/ver-factura.component.html
+++ b/src/app/components/sales/ver-factura/ver-factura.component.html
@@ -49,6 +49,7 @@
               <th style="width: 10%; ">Precio</th>
               <th style="width: 10%; ">Descuento</th>
               <th style="width: 10%; ">Tamaño</th>
+              <th style="width: 10%; ">Uni. Medida</th>
               <th style="width: 10%; ">Color</th>
             </tr>
           </thead>
@@ -60,6 +61,7 @@
               <td>{{detalleMovimientos.precio}}</td>
               <td>{{detalleMovimientos.desc_add}}</td>
               <td>{{detalleMovimientos.tamanio}}</td>
+              <td>{{detalleMovimientos.unidad_medida}}</td>
               <td>{{detalleMovimientos.color}}</td>
             </tr>
           </tbody>
