--- a/src/app/components/shooping/ver-compra/ver-compra.component.html
+++ b/src/app/components/shooping/ver-compra/ver-compra.component.html
@@ -40,6 +40,7 @@
                             <th style="width: 10%; ">Precio Uni.</th>
                             <th style="width: 10%; ">Precio</th>
                             <th style="width: 10%; ">Tamaño</th>
+                            <th style="width: 10%; ">Uni. Medida</th>
                             <th style="width: 10%; ">Color</th>
                         </tr>
                     </thead>
@@ -50,6 +51,7 @@
                             <td>{{detalleMovimientos.costo}}</td>
                             <td>{{detalleMovimientos.precio}}</td>
                             <td>{{detalleMovimientos.tamanio}}</td>
+                            <td>{{detalleMovimientos.unidad_medida}}</td>
                             <td>{{detalleMovimientos.color}}</td>
                         </tr>
                     </tbody>
