--- a/src/app/components/navegation-cl/navegation-cl.component.html
+++ b/src/app/components/navegation-cl/navegation-cl.component.html
@@ -51,10 +51,16 @@
                 <span class="material-icons-outlined" style="font-size: 24px">apps</span>
                 <font style="font-size: 13px; text-align: right;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Inventarios</font>
             </a>
-            <a mat-list-item href="#" style="color: white">
+            <!--
+                <a mat-list-item href="#" style="color: white">
                 <span class="material-icons-outlined" style="font-size: 24px">widgets</span>
                 <font style="font-size: 13px; text-align: right;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Pedido Sugerido</font>
             </a>
+            -->
+            <a mat-list-item href="#" class="disabled-link" style="color: white">
+                <span class="material-icons-outlined" style="font-size: 24px">widgets</span>
+                <font style="font-size: 13px; text-align: right;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Pedido Sugerido</font>
+              </a>
             <a mat-list-item [routerLink]="[{ outlets: { contentClient: ['almaceningresos'] } }]" style="color: white">
                 <span class="material-icons-outlined" style="font-size: 24px">shopping_cart</span>
                 <font style="font-size: 13px; text-align: right;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Plasticaucho</font>
