--- a/src/app/components/sales/ver-detalle/ver-detalle.component.html
+++ b/src/app/components/sales/ver-detalle/ver-detalle.component.html
@@ -22,20 +22,22 @@
                 <th style="width: 10%; ">Precio Uni.</th>
                 <th style="width: 10%; ">Precio</th>
                 <th style="width: 10%; ">Tamaño</th>
+                <th style="width: 10%; ">Uni. Medida</th>
                 <th style="width: 10%; ">Color</th>
             </tr>
         </thead>
         <tbody style="color: #767695;">
             <tr *ngFor="let detalleMovimientos of lstDetalleMovimientos">
                 <td style="text-align: center;">
-                    <img src={{detalleMovimientos.url_image}} class="img-thumbnail"
-                        height="100px" width="100px" data-toggle="modal" data-target="#exampleModal">
+                    <img src={{detalleMovimientos.url_image}} class="img-thumbnail" height="100px" width="100px"
+                        data-toggle="modal" data-target="#exampleModal">
                 </td>
                 <td>{{detalleMovimientos.producto_nombre}}</td>
                 <td>{{detalleMovimientos.cantidad}}</td>
                 <td>{{detalleMovimientos.costo}}</td>
                 <td>{{detalleMovimientos.precio}}</td>
                 <td>{{detalleMovimientos.tamanio}}</td>
+                <td>{{detalleMovimientos.unidad_medida}}</td>
                 <td>{{detalleMovimientos.color}}</td>
             </tr>
         </tbody>
