--- a/src/app/components/shooping/compraprov/compraprov.component.html
+++ b/src/app/components/shooping/compraprov/compraprov.component.html
@@ -28,11 +28,38 @@
                     </span>
                 </a>
             </div>
-            <br><br><br>
+            <br><br>
+            <form [formGroup]="filtroForm">
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="form-group">
+                            <label for="fechaDesde">Fecha Desde:</label>
+                            <input type="date" id="fechaDesde" style="width: 210px;" class="form-control" formControlName="fechaDesde"
+                                (change)="filterByDate()">
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="form-group">
+                            <label for="fechaHasta">Fecha Hasta:</label>
+                            <input type="date" id="fechaHasta" [value]="fechaActual" [ngModel]="fechaActual" style="width: 210px;" class="form-control" formControlName="fechaHasta"
+                                (change)="filterByDate()">
+                        </div>
+                    </div>
+                    <div class="button-container">
+                        <button class="btn btn-primary" style="margin-top: 26px;" (click)="reiniciarFiltros()">
+                            <span style="color: white"> Reiniciar Filtros</span>
+                        </button>
+                    </div>
+                </div>
+            </form><br>
             <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="row-border hover">
                 <thead style="color: #636363;">
                     <tr>
-                        <th style="width: 20%; ">CÓDIGO</th>
+                        <th style="width: 5%; ">CÓDIGO</th>
+                        <th style="width: 20%; ">PROVEEDOR</th>
+                        <th style="width: 20%; ">TIPO DE COMPRA</th>
+                        <th style="width: 20%; ">SUSTENTO</th>
+                        <th style="width: 20%; ">COMPROBANTE</th>
                         <th style="width: 20%; ">FECHA</th>
                     </tr>
                 </thead>
@@ -40,7 +67,11 @@
                     <tr *ngFor="let movimiento of lstMovimientos" class="table-row"
                         class="table-row">
                         <td >{{movimiento.id}}</td>
-                        <td>{{movimiento.fecha_emision | slice:0:10}}</td>
+                        <td >{{movimiento.proveedor}}</td>
+                        <td >{{movimiento.tipo_comprb}}</td>
+                        <td >{{movimiento.sustento}}</td>
+                        <td >{{movimiento.comp_venta}}</td>
+                        <td>{{movimiento.fecha_emision}}</td>
                     </tr>
                 </tbody>
             </table>
