--- a/src/app/components/shooping/compra-nuevo/compra-nuevo.component.html
+++ b/src/app/components/shooping/compra-nuevo/compra-nuevo.component.html
@@ -1,45 +1,56 @@
-<div style="max-width: 100%; margin: auto;">
+<div style="max-width: 100%; margin: auto; overflow: hidden;">
     <div class="dialog-content">
         <div class="btn-cerrar">
-            <fa-icon [icon]="faTimes" class="btn btn-danger" [size]="'lg'" data-toggle="tooltip"
-                data-placement="bottom" title="Regresar a pedidos" (click)="cerrarDialog()">
+            <fa-icon [icon]="faTimes" class="btn btn-danger" [size]="'lg'" data-toggle="tooltip" data-placement="bottom"
+                title="Regresar a pedidos" (click)="cerrarDialog()">
             </fa-icon>
         </div>
     </div>
     <br>
-            <br/><br/>
-            <div class="table-container">
-            <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="row-border hover">
-                <thead style="color: #636363;">
-                    <tr>
-                        <th style="width: 10%; ">CÓDIGO</th>
-                        <th style="width: 10%; ">PRODUCTO</th>
-                        <th style="width: 10%; ">ETIQUETAS</th>
-                        <th style="width: 10%; ">TAMAÑO</th>
-                        <th style="width: 10%; ">U. MEDIDA</th>
-                        <th style="width: 10%; ">TARIFA</th>
-                        <th style="width: 10%; ">COSTO</th>
-                        <th style="width: 10%; ">CANTIDAD</th>
-                        <th style="width: 10%; ">PRECIO</th>
-                        <th style="width: 10%; "></th>
-                    </tr>
-                </thead>
-                <tbody style="color: #767695;">
-                    <tr *ngFor="let proveedorProducto of lstProveedoresProductos" class="table-row">
-                        <td>{{proveedorProducto.producto_id}}</td>
-                        <td>{{proveedorProducto.nombre_producto}}</td>
-                        <td>{{proveedorProducto.etiquetas}}</td>
-                        <td>{{proveedorProducto.tamanio}}</td>
-                        <td>{{proveedorProducto.unidad_medida}}</td>
-                        <td>{{proveedorProducto.descripcion_uni}}</td>
-                        <td>{{proveedorProducto.costo}}</td>
-                        <td>
-                            <input class="cool-input" (input)="onInput($event)" *ngIf="true" type="text" [(ngModel)]="proveedorProducto.cantidad" />
-                        </td>
-                        <td>{{proveedorProducto.precio}}</td>
-                        <td style="text-align: center;">
-                            <a class="btn button" (click)=" crearDetalle(proveedorProducto)"
-                                style="border-radius: 5px; 
+    <div class="d-flex justify-content-end">
+        <button class="btn button boton-adicional" (click)="nuevoProducto()">
+            <fa-icon [icon]="faPlus" [size]="'lg'" style="color: #ffffff; margin-right: 10px;"></fa-icon>
+            NUEVO PRODUCTO
+        </button>
+    </div>
+    <br /><br />
+    <div class="table-container">
+        <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="row-border hover">
+            <thead style="color: #636363;">
+                <tr>
+                    <th style="width: 10%; ">CÓDIGO</th>
+                    <th style="width: 10%; ">PRODUCTO</th>
+                    <th style="width: 10%; ">ETIQUETAS</th>
+                    <th style="width: 10%; ">TAMAÑO</th>
+                    <th style="width: 10%; ">U. MEDIDA</th>
+                    <th style="width: 10%; ">TARIFA</th>
+                    <th style="width: 10%; ">COSTO</th>
+                    <th style="width: 10%; ">CANTIDAD</th>
+                    <th style="width: 10%; ">PRECIO</th>
+                    <th style="width: 1%; "></th>
+                    <th style="width: 10%; "></th>
+                </tr>
+            </thead>
+            <tbody style="color: #767695;">
+                <tr *ngFor="let proveedorProducto of lstProveedoresProductos" class="table-row">
+                    <td>{{proveedorProducto.producto_id}}</td>
+                    <td>{{proveedorProducto.nombre_producto}}</td>
+                    <td>{{proveedorProducto.etiquetas}}</td>
+                    <td>{{proveedorProducto.tamanio}}</td>
+                    <td>{{proveedorProducto.unidad_medida}}</td>
+                    <td>{{proveedorProducto.descripcion_uni}}</td>
+                    <td>{{proveedorProducto.costo}}</td>
+                    <td>
+                        <input class="cool-input" (input)="onInput($event)" *ngIf="true" type="text"
+                            [(ngModel)]="proveedorProducto.cantidad" />
+                    </td>
+                    <td>{{proveedorProducto.precio}}</td>
+                    <td>
+                        <i *ngIf="proveedorProducto.productoExistente" class="fas fa-check-circle"
+                                style="color: green; margin-right: 5px;"></i>
+                    </td>
+                    <td style="text-align: center;">
+                        <a class="btn button" (click)=" crearDetalle(proveedorProducto)" style="border-radius: 5px; 
                                        background: rgb(49,99,173,0.8); 
                                        font-size: 13px; width:75px; 
                                        height:35px;
@@ -48,13 +59,13 @@
                                        margin-left: 0px;
                                        margin-top: 0px;
                                        ">
-                                <span style="color:white;">
-                                        AÑADIR
-                                </span>
-                            </a>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
+                            <span style="color:white;">
+                                AÑADIR
+                            </span>
+                        </a>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
 </div>
