--- a/src/app/components/shooping/compra-nuevo/compra-nuevo.component.html
+++ b/src/app/components/shooping/compra-nuevo/compra-nuevo.component.html
@@ -9,7 +9,7 @@
     <br>
     <div class="d-flex justify-content-end">
         <button class="btn button boton-adicional" (click)="nuevoProducto()">
-            <fa-icon [icon]="faPlus" [size]="'lg'" style="color: #ffffff; margin-right: 10px;"></fa-icon>
+            <fa-icon [icon]="faFolderPlus" [size]="'lg'" style="color: #ffffff; margin-right: 10px;"></fa-icon>
             NUEVO PRODUCTO
         </button>
     </div>
