--- a/src/app/components/shooping/menucompr/menucompr.component.html
+++ b/src/app/components/shooping/menucompr/menucompr.component.html
@@ -21,8 +21,8 @@
             </div>
             <div class="d-flex justify-content-end">
                 <button class="btn button carrito-button" (click)="verCarrito()" [disabled]="buttonsDisabled">
-                    <fa-icon [icon]="faShoppingCart" [size]="'lg'" style="color: #ffffff"></fa-icon>
-                    - AÑADIR
+                    <fa-icon [icon]="faCartPlus" [size]="'lg'" style="color: #ffffff; margin-right: 5px;"></fa-icon>
+                    AÑADIR
                 </button>
             </div>
             <div class="form-group" style="margin-top: 20px;">
