--- a/src/app/components/sales/menuvent/menuvent.component.html
+++ b/src/app/components/sales/menuvent/menuvent.component.html
@@ -210,7 +210,7 @@
         </div>
         <br><br><br>
         <div class="button-container">
-            <button class="btn btn-primary" [disabled]="lstDetalleMovimientos.length == 0" (click)="finalizarPedido()">
+            <button class="btn btn-primary" [disabled]="!clienteDatosCompletos || lstDetalleMovimientos.length == 0" (click)="finalizarPedido()">
                 <span style="color: white"> Continuar</span>
             </button>
         </div>
